--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,7 @@
   src: url(../public/fonts/Lato-Thin.ttf) format("truetype");
 }
 .home-page-img {
-  background-image: url("../assets/home-page-img.svg");
+  background-image: url("../assets/home-page-img.webp");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
