--- a/src/features/sabbathSchool/modal/ModalStyles.css
+++ b/src/features/sabbathSchool/modal/ModalStyles.css
@@ -1,35 +1,33 @@
-/* ModalStyles.css */
-.modal {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5);
-  }
-  
+.modal-overlay {
+  background-color: rgba(107, 114, 128, 0.75); /* This creates the dimmed effect */
+}
+
+.modal-content {
+  position: relative; /* Added for absolute positioning of the close button */
+  z-index: 50; /* Higher than overlay */
+  margin: auto;
+  background: white;
+  border-radius: 0.5rem; /* Round corners */
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+  max-width: 500px; /* Max modal width */
+  width: 100%; /* Responsive width */
+}
+
+.close {
+  top: -10px; /* Adjust as needed */
+  right: -10px; /* Adjust as needed */
+  background: #ffffff; /* Match modal background */
+  border-radius: 50%; /* Circle shape */
+  padding: 0.5rem; /* Padding around the 'x' */
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.05); /* Shadow for the button */
+  line-height: 1; /* Control the line height */
+}
+
+/* Small breakpoints adjustments for full width */
+@media (max-width: 640px) {
   .modal-content {
-    position: fixed;
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+    width: 90%;
+    margin: 0 5%;
   }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  
+}
+
