Work on Toastify Styles 4th Info,warning,Progress bar

--- a/src/index.css
+++ b/src/index.css
@@ -152,3 +152,17 @@
   background-color: #bd362f;
 }
 
+/* Change the background color of the toast when it's an info message */
+.Toastify__toast--info {
+  background-color: #b4622f;
+}
+
+/* Change the background color of the toast when it's a warning message */
+.Toastify__toast--warning {
+  background-color: #c57300;
+}
+
+/* Change the color of the progress bar */
+.Toastify__progress-bar {
+  background-color: rgb(255, 85, 0);
+}
