Change the dots color to white

--- a/src/pages/user/LoadingAnimation.css
+++ b/src/pages/user/LoadingAnimation.css
@@ -15,7 +15,7 @@
   width: 15px;
   height: 15px;
   margin: 5px;
-  background-color: #3498db;
+  background-color: #ffffff;
   border-radius: 50%;
   animation: bounce 1.4s infinite ease-in-out both;
 }
