Update styling for sabbath school sections

--- a/src/features/sabbathSchool/SSLStyles.css
+++ b/src/features/sabbathSchool/SSLStyles.css
@@ -12,6 +12,7 @@
     
 .wrapper p {
         text-indent: 20px; 
+        margin-top: 10px;
       }
 .wrapper a {
         text-decoration: underline;
