Fix devotion with rich text editor format

--- a/src/index.css
+++ b/src/index.css
@@ -263,14 +263,15 @@ footer {
 
 .rich-text-container .ql-toolbar {
   display: none; /* Hide the toolbar */
+  font-family: "Nokia Pure Headline Bold" !important;
 }
 
 .rich-text-container * {
   border: none !important;
   box-shadow: none !important;
-  font-family: "Nokia Pure Headline Bold";
-}
-
-.rich-text-container .ql-editor strong, .rich-text-container .ql-editor b {
   font-family: "Nokia Pure Headline Bold" !important;
 }
+
+/* .rich-text-container .ql-editor strong, .rich-text-container .ql-editor b {
+  font-family: "Nokia Pure Headline Bold" !important;
+} */
